posts: ais3-2023: fix img path

--- a/source/_posts/AIS3-2023-最佳專題.md
+++ b/source/_posts/AIS3-2023-最佳專題.md
@@ -124,6 +124,6 @@ abstract class AbstractGenerator implements GeneratorInterface, LoggerAwareInter
 
 ## 證書
 
-![AIS3 2023 best project](/AIS3-2023-最佳專題/ais3-2023-best-project.jpeg)
+![AIS3 2023 best project](/ais3-2023-最佳專題/ais3-2023-best-project.jpeg)
 
-![AIS3-2023](/AIS3-2023-最佳專題/ais3-2023.jpg)
+![AIS3-2023](/ais3-2023-最佳專題/ais3-2023.jpg)
